==> Darkflicker/esp32-wifi-bootstrap/src/wifi_config.c <==
#include <stdio.h>
#include <string.h>
#include <stdint.h>
#include <lwip/sockets.h>
#include <lwip/ip_addr.h>
#include <freertos/FreeRTOS.h>
#include <freertos/task.h>
#include <freertos/timers.h>
#include <freertos/semphr.h>
#include <esp_wifi.h>
#include <esp_event.h>
#include <esp_netif.h>
#include <esp_system.h>
#include <esp_timer.h>
#include <esp_log.h>
#include <nvs_flash.h>
#include <nvs.h>
#include <http_parser.h>
#include "wifi_config.h"
#include "form_urlencoded.h"
#define STATION_GOT_IP 5
#define SOFTAP_IF WIFI_IF_AP
#define STATION_IF WIFI_IF_STA

static void wifi_scan_task(void *arg)
{
        INFO("Starting WiFi scan");
        while (true) {
                if (sdk_wifi_get_opmode() != STATIONAP_MODE)
                        break;

                esp_wifi_scan_start(NULL, true);

                uint16_t ap_num = 0;
                esp_wifi_scan_get_ap_num(&ap_num);
                wifi_ap_record_t *records = calloc(ap_num, sizeof(wifi_ap_record_t));
                if (records && esp_wifi_scan_get_ap_records(&ap_num, records) == ESP_OK) {
                        xSemaphoreTake(wifi_networks_mutex, portMAX_DELAY);

                        wifi_network_info_t *wifi_network = wifi_networks;
                        while (wifi_network) {
                                wifi_network_info_t *next = wifi_network->next;
                                free(wifi_network);
                                wifi_network = next;
                        }
                        wifi_networks = NULL;

                        for (int i = 0; i < ap_num; i++) {
                                wifi_network_info_t *net = wifi_networks;
                                while (net) {
                                        if (!strncmp(net->ssid, (char *)records[i].ssid, sizeof(net->ssid)))
                                                break;
                                        net = net->next;
                                }
                                if (!net) {
                                        wifi_network_info_t *net = malloc(sizeof(wifi_network_info_t));
                                        memset(net, 0, sizeof(*net));
                                        strncpy(net->ssid, (char *)records[i].ssid, sizeof(net->ssid));
                                        net->secure = records[i].authmode != WIFI_AUTH_OPEN;
                                        net->next = wifi_networks;
                                        wifi_networks = net;
                                }
                        }

                        xSemaphoreGive(wifi_networks_mutex);
                }

                free(records);
                vTaskDelay(10000 / portTICK_PERIOD_MS);
        }

        xSemaphoreTake(wifi_networks_mutex, portMAX_DELAY);

        wifi_network_info_t *wifi_network = wifi_networks;
        while (wifi_network) {
                wifi_network_info_t *next = wifi_network->next;
                free(wifi_network);
                wifi_network = next;
        }
        wifi_networks = NULL;

        xSemaphoreGive(wifi_networks_mutex);

        vTaskDelete(NULL);
}

static void wifi_config_softap_start() {
        INFO("Starting AP mode");

        esp_wifi_disconnect();

        sdk_wifi_set_opmode(STATIONAP_MODE);

        uint8_t macaddr[6];
        sdk_wifi_get_macaddr(SOFTAP_IF, macaddr);

        wifi_config_t ap_cfg;
        sdk_wifi_softap_get_config(&ap_cfg);
        ap_cfg.ap.ssid_len = snprintf(
                (char *)ap_cfg.ap.ssid, sizeof(ap_cfg.ap.ssid),
                "%s-%02X%02X%02X", context->ssid_prefix, macaddr[3], macaddr[4], macaddr[5]
                );
        ap_cfg.ap.ssid_hidden = 0;
        if (context->password) {
                ap_cfg.ap.authmode = WIFI_AUTH_WPA_WPA2_PSK;
                strncpy((char *)ap_cfg.ap.password,
                        context->password, sizeof(ap_cfg.ap.password));
        } else {
                ap_cfg.ap.authmode = WIFI_AUTH_OPEN;
        }
        ap_cfg.ap.max_connection = 2;
        ap_cfg.ap.beacon_interval = 100;

        DEBUG("Starting AP SSID=%s", ap_cfg.ap.ssid);

        sdk_wifi_softap_set_config(&ap_cfg);

        wifi_networks_mutex = xSemaphoreCreateBinary();
        xSemaphoreGive(wifi_networks_mutex);

        xTaskCreate(wifi_scan_task, "wifi_config scan", 4096, NULL, 2, NULL);

        INFO("Starting AP interface");

        dns_start();
        http_start();
}
